welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:20: error: not found: value ance
		ance()//se repositioner
                ^